--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/jest": "^24.9.1",
+    "@types/lodash.debounce": "^4.0.6",
     "@types/node": "^12.20.13",
     "@types/react": "^16.14.6",
     "@types/react-dom": "^16.9.13",
     "@types/react-redux": "^7.1.16",
+    "lodash.debounce": "^4.0.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
